some bomb coding to save